// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should be defined and renders correctly (snapshot) 1`] = `
<ul
  className="breadcrumb"
>
  <li
    className="breadcrumb__item"
    key=".0"
  >
    <a
      href="#first"
    >
      First
    </a>
  </li>
  <li
    className="breadcrumb__item"
    key=".1"
  >
    <a
      href="#Second"
    >
      Second
    </a>
  </li>
  <li
    className="breadcrumb__item"
    key=".2"
  >
    <a
      href="#Third"
    >
      Third - long text will be truncated for a better user experience
    </a>
  </li>
</ul>
`;

exports[`Breadcrumb component should renders correctly with one children 1`] = `
<ul
  className="breadcrumb"
>
  <li
    className="breadcrumb__item"
    key=".0"
  >
    <a
      href="#first"
    >
      First
    </a>
  </li>
</ul>
`;
